<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ForgotSettingsActivity">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_centerHorizontal="true"
        android:background="@drawable/userbg"
        android:layout_marginTop="70dp"/>


    <TextView
        android:id="@+id/setting_textreset"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/please_enter_your_email_n_we_ll_send_you_a_link_to_reset_n_your_password"
        android:textColor="@color/yazicolor"
        android:textSize="20sp"
        android:textAlignment="center"
        android:layout_marginTop="25dp"
        android:layout_below="@id/logo" />

    <EditText
        android:id="@+id/setting_forgot_email_et"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@id/setting_textreset"
        android:layout_marginTop="35dp"
        android:background="@drawable/etframe"
        android:hint="@string/write_your_email"
        android:maxLines="1"
        android:padding="10dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:inputType="textEmailAddress"/>

    <Button
        android:id="@+id/setting_forgot_send_btn"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/buttonframe"
        android:text="@string/send"
        android:textColor="@android:color/white"
        android:textSize="23sp"
        android:padding="10dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_below="@id/setting_forgot_email_et"
        android:layout_marginTop="20dp"/>

</RelativeLayout>