<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/mirket_bc"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">



            <ImageView
                android:id="@+id/logo"
                android:layout_width="140dp"
                android:layout_height="130dp"
                android:layout_centerHorizontal="true"
                android:background="@drawable/loglogloglo"
                android:layout_marginTop="70dp"/>

            <ProgressBar
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/Widget.AppCompat.ProgressBar.Horizontal"
                android:layout_marginRight="15dp"
                android:layout_below="@id/logo"
                android:layout_marginTop="40dp"
                android:layout_marginLeft="15dp"
                android:id="@+id/progress_bar"/>

            <EditText
                android:id="@+id/login_email"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_below="@id/progress_bar"
                android:inputType="textEmailAddress"
                android:layout_marginStart="8dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="8dp"
                android:background="@drawable/etframe"
                android:hint="@string/email"
                android:maxLines="1"
                android:padding="10dp"
                android:textAlignment="textStart" />

            <EditText
                android:id="@+id/login_password"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:hint="@string/password"
                android:maxLines="1"
                android:inputType="textPassword"
                android:textAlignment="textStart"
                android:background="@drawable/etframe"
                android:padding="10dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:layout_below="@id/login_email"
                android:layout_marginTop="20dp"/>


            <Button
                android:id="@+id/login_button"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/buttonframe"
                android:layout_centerHorizontal="true"
                android:layout_below="@+id/login_password"
                android:text="@string/login"
                android:textColor="@android:color/white"
                android:textSize="23sp"
                android:layout_marginTop="40dp"
                android:padding="10dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"

                />

            <TextView
                android:id="@+id/register_now"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:text="@string/don_t_you_have_account_n_register_now"
                android:textColor="@color/yazicolor"
                android:textSize="23sp"
                android:textStyle="bold"
                android:textAlignment="center"
                android:layout_below="@id/login_button"
                android:layout_marginTop="30dp"/>

            <TextView
                android:id="@+id/forgot_password"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:text="@string/forgot_password"
                android:textSize="20sp"
                android:textColor="@color/yazicolor"
                android:textAlignment="center"
                android:layout_marginEnd="10dp"
                android:layout_below="@id/register_now"
                android:layout_marginBottom="20dp"
                android:layout_marginTop="50dp"/>

        </RelativeLayout>

    </ScrollView>

</RelativeLayout>