<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditProfileActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/edit_profile_image"
                android:layout_width="160dp"
                android:layout_height="160dp"
                android:src="@drawable/randommmmm"
                app:civ_border_width="2dp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="20dp"
                app:civ_border_color="@color/colorPrimary"/>

            <ProgressBar
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/Widget.AppCompat.ProgressBar.Horizontal"
                android:layout_marginRight="15dp"
                android:layout_below="@id/edit_profile_image"
                android:layout_marginTop="25dp"
                android:layout_marginLeft="15dp"
                android:id="@+id/edit_progressbar"/>


            <LinearLayout
                android:id="@+id/linear_age_gender_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:layout_below="@id/edit_progressbar"
                android:orientation="horizontal">


                <EditText
                    android:id="@+id/edit_age"
                    android:layout_width="70dp"
                    android:layout_height="40dp"
                    android:inputType="number"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="20dp"
                    android:background="@drawable/etdarkframe"
                    android:hint="@string/age"
                    android:maxLines="1"
                    android:maxLength="2"
                    android:textSize="20sp"
                    android:padding="10dp"/>


                <RadioGroup
                    android:id="@+id/edit_radio_group"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:visibility="gone"
                    android:orientation="horizontal">

                    <androidx.appcompat.widget.AppCompatRadioButton
                        android:id="@+id/edit_radio_female"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/female"
                        android:textColor="@color/yazicolor"
                        android:textSize="27sp"
                        android:checked="true"/>

                    <androidx.appcompat.widget.AppCompatRadioButton
                        android:id="@+id/edit_radio_male"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:text="@string/male"
                        android:textColor="@color/yazicolor"
                        android:textSize="27sp"/>

                </RadioGroup>

            </LinearLayout>

            <EditText
                android:id="@+id/edit_profile_name"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:background="@drawable/etdarkframe"
                android:layout_below="@id/linear_age_gender_edit"
                android:layout_marginTop="20dp"
                android:hint="@string/username"
                android:textSize="20sp"
                android:maxLines="1"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:padding="10dp"/>

            <EditText
                android:id="@+id/edit_city"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:background="@drawable/etdarkframe"
                android:layout_below="@id/edit_profile_name"
                android:layout_marginTop="20dp"
                android:hint="@string/city"
                android:maxLines="1"
                android:textSize="20sp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:padding="10dp"/>


            <RelativeLayout
                android:id="@+id/relative_spinner"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="20dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:background="@android:color/white"
                android:layout_below="@id/linear_age_gender_edit"
                android:visibility="gone">

                <androidx.appcompat.widget.AppCompatSpinner
                    android:id="@+id/spinner_country_edit"
                    android:layout_width="match_parent"
                    android:entries="@array/countries_array"
                    android:visibility="gone"
                    android:layout_height="35dp"/>

            </RelativeLayout>

            <EditText
                android:id="@+id/edit_about"
                android:layout_width="match_parent"
                android:layout_height="90dp"
                android:layout_below="@id/edit_city"
                android:background="@drawable/etdarkframe"
                android:layout_marginTop="20dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:padding="10dp"
                android:textSize="20sp"
                android:inputType="textMultiLine"
                android:scrollbarAlwaysDrawVerticalTrack="true"
                android:maxLength="180"
                android:maxLines="4"
                android:hint="About"/>

            <Button
                android:id="@+id/edit_save_button"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_below="@id/edit_about"
                android:layout_marginTop="40dp"
                android:background="@drawable/buttonframe"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:text="Save"
                android:textColor="@android:color/white"
                android:textSize="23sp"
                android:layout_marginBottom="20dp"/>



        </RelativeLayout>

    </ScrollView>

</RelativeLayout>